objects/ssot__CarePreauthorizationItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CarePreauthorizationId__c</fullName>
        <label>Care Preauthorization</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarePreauthorizationNoteText__c</fullName>
        <label>Care Preauthorization Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndingServiceCode__c</fullName>
        <label>Ending Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Preauthorization Item Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ItemQuantity__c</fullName>
        <label>ItemQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Laterality__c</fullName>
        <label>Laterality</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreauthitemSequenceNumber__c</fullName>
        <label>PreauthitemSequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDate__c</fullName>
        <label>Source System Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartingServiceCode__c</fullName>
        <label>Starting Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnitValueText__c</fullName>
        <label>Unit Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726573342_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePreauthorizationItem_CarePreauth_rel</label>
        <referenceTo>ssot__CarePreauthorization__dlm</referenceTo>
        <relationshipLabel>CarePreauthorizationItem_CarePreauth_rel</relationshipLabel>
        <relationshipName>rel_1716726573342_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>